testcases/error-cases/syntax-error-05/error.txt
error[E0014]: unexpected end of file
 --> testcases\error-cases\syntax-error-05\input.canon:2:1
  |
1 | val name = "test"
2 | = // missing left side of assignment
  | ^
3 | 
  |
  = note: expected end of file, '#schema', 'schema', 'struct', 'union', 'type', 'use', 'this', 'val', 'var', 'fun', '{', 'LBRACKET', annotation, or identifier
  = note: the file ended unexpectedly
  = help: check if you are missing closing braces, parentheses, or string terminators
